--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
-#Firebase access
+#Firebase access config
 /src/app/services/config.ts
 
 # compiled output
