--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "^14.1.2",
     "@angular/compiler": "^14.1.2",
     "@angular/core": "^14.1.2",
+    "@angular/fire": "^7.4.1",
     "@angular/forms": "^14.1.2",
     "@angular/material": "^14.1.2",
     "@angular/platform-browser": "^14.1.2",
